--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
+    "firebase-tools": "^11.25.3",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
