--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
     "firebase-tools": "^11.25.3",
+    "framer-motion": "^10.11.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
